anotherApp dependancy with installApp and generateDepArti 678

--- a/AnApp_MDA/app.json
+++ b/AnApp_MDA/app.json
@@ -34,6 +34,12 @@
       "name": "App1",
       "publisher": "Freddy Kristiansen",
       "version": "1.0.0.0"
+    },
+        {
+      "id": "3ac109ac-e684-4688-be0f-faf8d5c99238",
+      "name": "AnotherApp",
+      "publisher": "Freddy Kristiansen",
+      "version": "1.0.0.0"
     }
   ],
   "screenshots": [],
