--- a/.github/AL-Go-Settings.json
+++ b/.github/AL-Go-Settings.json
@@ -7,5 +7,7 @@
       "url": "https://api.nuget.org/v3/index.json",
       "patterns": "FreddyKristiansen.App1.8c8eec06-bf1c-4ab6-b375-a0a6cf31a6bd"
     }
-  ]
+  ],
+    "generateDependencyArtifact": true
+
 }
